# workshop-env

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
hub/: workshop.yaml
sidecar/: Cargo.toml
