[package]
name = "sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
envy = "0.4.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.117"
atomic-waker = "1.1.2"
futures-util = "0.3.30"
pin-project-lite = "0.2.14"
pin-project = "1.1.10"
tower-http = { version = "0.6.6", features = ["trace"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tracing-test = "0.2.5"
